_includes/css/agency.css
/* ... */
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-brand:active,
.navbar-default .navbar-brand.active {
    color: #{{ site.data.template.color.secondary }};
}

.navbar-default .navbar-collapse {
    border-color: rgba(255,255,255,.02);
}

.navbar-default .navbar-toggle {
    border-color: #{{ site.data.template.color.primary }};
    background-color: #{{ site.data.template.color.primary }};
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #{{ site.data.template.color.primary }};
}

.navbar-default .nav li a {
    text-transform: uppercase;
    font-family: {{ site.data.template.font.primary }};
    font-weight: 400;
    letter-spacing: 1px;
    color: #fff;
}

.navbar-default .nav li a:hover,
.navbar-default .nav li a:focus {
    outline: 0;
    color: #{{ site.data.template.color.primary }};
}

.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #{{ site.data.template.color.primary }};
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #{{ site.data.template.color.secondary }};
}

@media(min-width:768px) {
    .navbar-default-color {
        padding: 25px 0;
        background-color: transparent;
    }
    .navbar-default {
        border: 0;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }
    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink {
        padding: 10px 0;
        background-color: #222;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}

header {
    height: 100vh;
    text-align: center;
    color: #fff;
    background-attachment: scroll;
    background-image: url('{{ site.baseurl }}/css/img/header-bg.jpg');
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

header .event-text {
    padding-top: 25vh;
    padding-bottom: 50px;
}

header .event-text .event-lead-in {
    margin-bottom: 25px;
    font-family: {{ site.data.template.font.secondary }};
    font-size: 22px;
    font-style: italic;
    line-height: 22px;
}

header .event-text .event-heading {
    margin-bottom: 25px;
    text-transform: uppercase;
    font-family: {{ site.data.template.font.primary }};
    font-size: 40px;
    font-weight: 700;
    line-height: 40px;
}

@media(min-width:768px) {    
    header .event-text {
        padding-top: 300px;
        padding-bottom: 200px;
    }

    header .event-text .event-lead-in {
        margin-bottom: 25px;
        font-family: {{ site.data.template.font.secondary }};
        font-size: 40px;
        font-style: italic;
        line-height: 40px;
    }

    header .event-text .event-heading {
        margin-bottom: 50px;
        text-transform: uppercase;
        font-family: {{ site.data.template.font.primary }};
        font-size: 75px;
        font-weight: 700;
        line-height: 75px;
    }
}

section {
    padding: 100px 0;
}

aside.clients h2,
section h2.section-heading {
    margin-top: 0;
    margin-bottom: 15px;
    font-size: 40px;
}

section h3.section-subheading {
    margin-bottom: 75px;
    text-transform: none;
    font-family: {{ site.data.template.font.secondary }};
    font-size: 120%;
    font-style: italic;
    font-weight: 400;
}

@media(min-width:768px) {
    section {
        padding: 150px 0;
    }
}

#speakers img,
img.speakers-info
{
    max-height: 360px;
}

.service-heading {
    margin: 15px 0;
    text-transform: none;
}

#speakers .speakers-item {
    right: 0;
    margin: 0 0 15px;
}

#speakers .speakers-item .speakers-link {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 400px;
}

#speakers .speakers-item .speakers-link .speakers-hover {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
    background: #{{ site.data.template.color.primary }};
}

#speakers .speakers-item .speakers-link .speakers-hover:hover {
    opacity: 1;
}

#speakers .speakers-item .speakers-link .speakers-hover .speakers-hover-content {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 20px;
    margin-top: -12px;
    text-align: center;
    font-size: 120%;
    color: #fff;
}

#speakers .speakers-item .speakers-link .speakers-hover .speakers-hover-content i {
    margin-top: -12px;
}

#speakers .speakers-item .speakers-link .speakers-hover .speakers-hover-content h3,
#speakers .speakers-item .speakers-link .speakers-hover .speakers-hover-content h4 {
    margin: 0;
}

#speakers .speakers-item .speakers-caption {
    margin: 0 auto;
    padding-top: 25px;
    padding-bottom: 5px;
    max-width: 400px;
    min-height: 100px;
    text-align: center;
    background-color: #fff;
}

#speakers .speakers-item .speakers-caption h4 {
    margin: 0;
    text-transform: none;
}

/*
#speakers .speakers-item .speakers-caption p {
    margin: 0;
    font-family: {{ site.data.template.font.secondary }};
    font-size: 100%;
    font-style: italic;
}
*/

#speakers * {
    z-index: 2;
}

@media(min-width:767px) {
    #speakers .speakers-item {
        margin: 0 0 30px;
    }
}

.timeline {
    position: relative;
    padding: 0;
    list-style: none;
}

.timeline:before {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 40px;
    width: 2px;
    margin-left: -1.5px;
    background-color: #777;
}
/* ... */

